--- a/userservice/userservice.yml
+++ b/userservice/userservice.yml
@@ -9,7 +9,7 @@ spring:
   database:
     driverClassName: "com.mysql.jdbc.Driver"
   datasource:
-    url: "jdbc:mysql://bda3bf637497b7:ee5ffb70@eu-cdbr-west-02.cleardb.net/heroku_eed8450e812a01e?reconnect=true"
+    url: "jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_eed8450e812a01e?reconnect=true"
     username: "bda3bf637497b7"
     password: "ee5ffb70"
     testWhileIdle: "true"
