--- a/itemservice/itemservice.yml
+++ b/itemservice/itemservice.yml
@@ -9,9 +9,9 @@ spring:
   database:
     driverClassName: "com.mysql.jdbc.Driver"
   datasource:
-    url: "jdbc:mysql://localhost:3306/itemsharingdatabase"
-    username: "root"
-    password: "root"
+    url: "jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_eed8450e812a01e?reconnect=true"
+    username: "bda3bf637497b7"
+    password: "ee5ffb70"
     testWhileIdle: "true"
     validationQuery: "SELECT 1"
     
