add oauth config

--- a/authorizationservice/authorizationservice.yml
+++ b/authorizationservice/authorizationservice.yml
@@ -15,23 +15,23 @@ spring:
     testWhileIdle: "true"
     validationQuery: "SELECT 1"
     
-#security:
-#  basic:
-#    enabled: false
-
-server:
-  port: 8082
-
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8901/user
-
+      user-info-uri: http://localhost:8901/user
+    
+server:
+  port: 8901
+  
 eureka:
   instance:
-    perferIpAddress: true
+    preferIpAddress: true
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka
+      
+signing:
+  key: 345345fsdgsf5345
+ 
